adds responsibilities and edits nav bar

--- a/impacts.html
+++ b/impacts.html
@@ -39,9 +39,9 @@
 							<li class="current"><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="responsibilities.html">Responsibilities</a></li>
 							<li><a href="measurement.html">Measuring Noise</a></li>
-							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
-							<li><a href="resources.html">Additional Resources</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform">Report Noise Pollution</a></li>
 						</ul>
 					</nav>
 
@@ -151,7 +151,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div></li>
+							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><div>Icons by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>, licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div></li><li><a href="resources.html">Additional Noise Resources</a></li>
 						</ul>
 					</div>
 
