--- a/index.html
+++ b/index.html
@@ -65,24 +65,6 @@
 		    } 
 
 		    setTimeout(fadeQuoteOut, 4000);
-
-		    /*(function() {
-
-			var quotes = $("#changeText");
-			var quoteIndex = -1;
-
-
-			    function showNextQuote() {
-			        ++quoteIndex;
-			        quotes.eq(quoteIndex % quotes.length)
-			            .fadeIn(2000)
-			            .delay(2000)
-			            .fadeOut(2000, showNextQuote);
-			    }
-
-			    showNextQuote();
-
-			})();​*/
 	    });
 		</script>
 
@@ -102,9 +84,9 @@
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="responsibilities.html">Responsibilities</a></li>
 							<li><a href="measurement.html">Measuring Noise</a></li>
-							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
-							<li><a href="resources.html">Additional Resources</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform">Report Noise Pollution</a></li>
 						</ul>
 					</nav>
 
@@ -120,7 +102,7 @@
 
 
 		<!-- Gigantic Heading -->
-			<section class="wrapper style2">
+			<section class="wrapper style1">
 				<div class="container">
 					<header class="major">
 						<h2>People shouldn't have to live with unhealthy noise</h2>
@@ -129,23 +111,13 @@
 				</div>
 			</section>
 
-		<!-- CTA -->
-		<section id="cta" class="wrapper style3">
-			<div class="container">
-				<header>
-					<h2>In order for the city to act, the citizens need to have their concerns heard. Do you have a noise concern? Use our noise pollution reporting tool to share your concerns with the city:</h2>
-				</header>
-				<a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform" class="button start-button">Start</a>
-			</div>
-		</section>
-
 	<section class="wrapper style2">
 				<header class="major">
 					<h2>See where noise is affecting people in San Francisco.</h2>
 				</header>
 				<div class="container">
 							<header>
-								<h3 class="map-title">Locations of noise pollution reported to the City of San Francisco.</h3>
+								<h3 class="map-title">The map below shows locations of resident noise pollution reports made to the City of San Francisco and shared with SF Noise Watch. Click on a location to learn more about the report.</h3>
 							</header>
 							<div class="map">
 								<iframe id="map_canvas1" width="100%" height="100%" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?q=select+col1+from+1RI56cP-SVL2mwQMxDp3G_vvI3am2p-bko5PqHjhS&amp;viz=MAP&amp;h=false&amp;lat=37.768865433858&amp;lng=-122.42254675316167&amp;t=1&amp;z=14&amp;l=col1&amp;y=6&amp;tmplt=7&amp;hml=ONE_COL_LAT_LNG"></iframe>
@@ -153,15 +125,15 @@
 				</div>
 	</section>
 
-
-	<section class="wrapper style1">
-			<header class="major">
-				<h2>Who is responsible for noise?</h2>
-			</header>
-			<div class="image-container">
-				<a class="image flow-chart"><img src="images/department-flow-chart.jpg" alt="" /></a>
+		<!-- CTA -->
+		<section id="cta" class="wrapper style3">
+			<div class="container">
+				<header>
+					<h2>In order for the city to act, the citizens need to have their concerns heard. Do you have a noise concern? Use our noise pollution reporting tool to share your concerns with the city:</h2>
+				</header>
+				<a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform" class="button start-button">Start</a>
 			</div>
-	</section>
+		</section>
 
 	<section class="wrapper style2">
 			<header class="major">
@@ -191,7 +163,7 @@
 						</section>
 						<section class="6u 12u(narrower)">
 							<div class="box post">
-								<a href="laws.html" class="image left"><img src="images/law-icon.png" alt="" /></a>
+								<a href="laws.html" class="image left"><img src="images/court.png" alt="" /></a>
 								<div class="inner">
 									<h3><a href="laws.html">Noise Laws</a></h3>
 									<p>Learn about San Francisco's Noise Laws and how they affect citizens.</p>
@@ -215,6 +187,26 @@
 								<div class="inner">
 									<h3><a href="measurement.html">Taking a Noise Measurement</a></h3>
 									<p>Instructions on how to take a noise measurement using an inexpensive mobile phone app.</p>
+								</div>
+							</div>
+						</section>
+					</div>
+					<div class="row">
+						<section class="6u 12u(narrower)">
+							<div class="box post">
+								<a href="responsibilities.html" class="image left"><img src="images/law-icon.png" alt="" /></a>
+								<div class="inner">
+									<h3><a href="responsibilities.html">Local Government Noise Responsibilities</a></h3>
+									<p>Learn which government agencies are responsible for different types of noise in San Francisco.</p>
+								</div>
+							</div>
+						</section>
+						<section class="6u 12u(narrower)">
+							<div class="box post">
+								<a href="resources.html" class="image left"><img src="images/resources-icon.png" alt="" /></a>
+								<div class="inner">
+									<h3><a href="resources.html">Additional Resources</a></h3>
+									<p>More information on noise standards and terms.</p>
 								</div>
 							</div>
 						</section>
