--- a/laws.html
+++ b/laws.html
@@ -60,9 +60,9 @@
 							<li><a href="impacts.html">Impacts</a></li>
 							<li class="current"><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="responsibilities.html">Responsibilities</a></li>
 							<li><a href="measurement.html">Measuring Noise</a></li>
-							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
-							<li><a href="resources.html">Additional Resources</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform">Report Noise Pollution</a></li>
 						</ul>
 					</nav>
 			</div>
@@ -104,24 +104,9 @@
 										<p>This page provides a summary of the laws and standards that apply to common sources of urban noise in San Francisco. Article 29 of the San Francisco Police Code, also known as the San Francisco Noise Ordinance, is the source of most of these laws and standards.</p> 
 
 
-
-										<p>Important definitions:
-
-										<dl class="law-list">
-
-											<li>Sound Exposure Level is the logarithmic measure of the Sound Pressure Level squared and integrated over a stated period of time or event, relative to a reference sound pressure value. The SEL is reported using the unit of the Decibel, abbreviate dB.</li>
-
-											<li> The A-weighted Sound Level (dB A) is a measure of sound pressure level designed to reflect the acuity of the human ear, which does not respond equally to all frequencies.</li>
-
-											<li>The ambient noise level is the lowest measured sound level at a given location and time without the noise source of interest operating.</li>
-
-											<li>dBC is shorthand for C-weighted decibles, which does not prioritize higher over lower frequency sounds. Government uses dBC as a possible measure for entertainment and restaurant related noise.</li>
-
-										</dl></p>
-
 										<table align="center" id ="law">
 
-											<caption><h3>What is creating noise?</h3></caption>
+											<caption><h3>What kind of noise are you concerned about?</h3></caption>
 
 											<tr>
 
@@ -295,6 +280,21 @@
 
 												<p><b>Construction</b> on behalf of the government follows the same rules as general construction. It is regulated under <a href = "https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2908</a> of the San Francisco Noise Ordinance by the Department of Public Works. Between 8:00PM and 7:00AM allowable levels are under 5dBA over the ambient noise level when measured from the property line. </p>
 
+										<h3 class="noise-header">Important definitions:</h3>
+
+										<dl class="law-list">
+
+											<li><b>Sound Exposure Level</b> is the logarithmic measure of the Sound Pressure Level squared and integrated over a stated period of time or event, relative to a reference sound pressure value. The SEL is reported using the unit of the Decibel, abbreviate dB.</li>
+
+											<li> The <b>A-weighted Sound Level (dB A)</b> is a measure of sound pressure level designed to reflect the acuity of the human ear, which does not respond equally to all frequencies.</li>
+
+											<li>The <b>ambient noise level</b> is the lowest measured sound level at a given location and time without the noise source of interest operating.</li>
+
+											<li><b>dBC is shorthand for C-weighted decibles</b>, which does not prioritize higher over lower frequency sounds. Government uses dBC as a possible measure for entertainment and restaurant related noise.</li>
+
+										</dl>
+
+
 							</article>
 
 
@@ -319,7 +319,7 @@
 
 						<ul class="menu">
 
-							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><a href="resources.html"><li>Additional Noise Resources</a></li>
 
 						</ul>
 
