--- a/resources.html
+++ b/resources.html
@@ -39,9 +39,9 @@
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="responsibilities.html">Responsibilities</a></li>
 							<li><a href="measurement.html">Measuring Noise</a></li>
-							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
-							<li class="current"><a href="resources.html">Additional Resources</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform">Report Noise Pollution</a></li>
 						</ul>
 					</nav>
 
