--- a/noise.html
+++ b/noise.html
@@ -39,9 +39,9 @@
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
 							<li class="current"><a href="noise.html">Solutions</a></li>
+							<li><a href="responsibilities.html">Responsibilities</a></li>
 							<li><a href="measurement.html">Measuring Noise</a></li>
-							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
-							<li><a href="resources.html">Additional Resources</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/1oXhFvrCaxsVJG5fTz0KbDY-y03vCtt49Mgxpezl_Vcg/viewform">Report Noise Pollution</a></li>
 						</ul>
 					</nav>
 
@@ -214,7 +214,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><a href="resources.html"><li>Additional Noise Resources</a></li>
 						</ul>
 					</div>
 			</div>
